Alterar texto de frete de 'A calcular' para 'Retirar na Loja'

--- a/templates/carrinho.html
+++ b/templates/carrinho.html
@@ -70,7 +70,7 @@
                     </div>
                     <div style="display: flex; justify-content: space-between; margin-bottom: 1rem;">
                         <span style="color: var(--text-secondary);">Frete:</span>
-                        <span style="font-weight: bold;">A calcular</span>
+                        <span style="font-weight: bold;">Retirar na Loja</span>
                     </div>
                     <div style="border-top: 2px solid #eee; padding-top: 1rem; margin-top: 1rem;">
                         <div style="display: flex; justify-content: space-between;">
