--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -168,7 +168,7 @@
                     </div>
                     <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
                         <span style="color: var(--text-secondary);">Frete:</span>
-                        <span style="font-weight: bold;">A calcular</span>
+                        <span style="font-weight: bold;">Retirar na Loja</span>
                     </div>
                     <div style="display: flex; justify-content: space-between; margin-top: 1rem; padding-top: 1rem; border-top: 1px solid #eee;">
                         <span style="font-size: 1.2rem; font-weight: bold;">Total:</span>
