--- a/templates/base.html
+++ b/templates/base.html
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>{{ footer.copyright if footer and footer.copyright else '© 2026 Clínica do Reparo. Todos os direitos reservados.' }}</p>
+                <p>{{ footer.copyright if footer and footer.copyright else '© 2026 Clínica do Reparo. Todos os direitos reservados. CNPJ: 62.891.287/0001-44' }}</p>
             </div>
         </div>
     </footer>
