Corrigir favicon e ajustar tamanho imagens reparos

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,8 @@
     
     <title>{% block title %}Clínica do Reparo - Assistência Técnica em Barueri{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/favi.ico') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favi.ico') }}">
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='img/favi.ico') }}">
     <link rel="canonical" href="{{ request.url if request else '' }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
