Refatorar carregamento do footer: implementar fallback padrão e otimizar busca no banco de dados. Atualizar informações de contato na página de contato.

--- a/templates/contato.html
+++ b/templates/contato.html
@@ -9,8 +9,8 @@
 {% block content %}
 <section class="page-header">
     <div class="container">
-        <h1>Contato - Assistência Técnica em Barueri</h1>
-        <p>Entre em contato para assistência técnica em Barueri, Alphaville e Tamboré. Estamos prontos para ajudar você!</p>
+        <h1>Contato - Assistência Técnica</h1>
+        <p>Entre em contato para assistência técnica, Estamos prontos para ajudar você!</p>
     </div>
 </section>
 
@@ -28,8 +28,8 @@
                         </div>
                         <div>
                             <h4>Telefone</h4>
-                            <p>(11) 99999-9999</p>
-                            <p>(11) 3333-3333</p>
+                            <p>(86) 988959957</p>
+                            
                         </div>
                     </div>
                     <div class="contact-method">
@@ -38,7 +38,7 @@
                         </div>
                         <div>
                             <h4>WhatsApp</h4>
-                            <p>(11) 99999-9999</p>
+                            <p>(86) 988959957</p>
                             <a href="#" class="btn btn-small">Falar no WhatsApp</a>
                         </div>
                     </div>
@@ -48,8 +48,8 @@
                         </div>
                         <div>
                             <h4>E-mail</h4>
-                            <p>contato@techassist.com.br</p>
-                            <p>suporte@techassist.com.br</p>
+                            <p>clinicadoreparo.sp@gmail.com</p>
+                            
                         </div>
                     </div>
                     <div class="contact-method">
@@ -58,8 +58,8 @@
                         </div>
                         <div>
                             <h4>Endereço</h4>
-                            <p>Rua Exemplo, 123</p>
-                            <p>São Paulo, SP - 01234-567</p>
+                            <p>Rua Rosely, 79</p>
+                            <p>SBarueri, SP - 064.36-270</p>
                         </div>
                     </div>
                 </div>
