--- a/templates/base.html
+++ b/templates/base.html
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>{{ footer.copyright if footer and footer.copyright else '© 2026 Clínica do Reparo. Todos os direitos reservados. CNPJ: 62.891.287/0001-44' }}</p>
+                <p>{% if footer and footer.copyright %}CNPJ: 62.891.287/0001-44 {{ footer.copyright }}{% else %}CNPJ: 62.891.287/0001-44 © 2026 Clínica do Reparo. Todos os direitos reservados.{% endif %}</p>
             </div>
         </div>
     </footer>
